[package]
name = "reticulum-router"
version = "1.2.1"
edition = "2024"

[dependencies]
dirs = "6.0"
rand = "0.8"
serde = "1.0.228"
toml = "1.0"

# Async IO
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"

# Logging
log = "0.4"
env_logger = "0.10"

# Core Reticulum Implementation
#reticulum-sdk = { path = "../reticulum-sdk" }
reticulum-sdk = { git = "https://github.com/GhostMeshLabs/reticulum-sdk.git", rev = "bee5a86ee884d3d7c5b76d4fed0626e34c7faee3" }
