[package]
name = "reticulum-router"
version = "1.3.8"
edition = "2024"

[dependencies]
dirs = "6.0"
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
rand = "0.8"
rmpv = "1.3.0"
serde = "1.0.228"
sha2 = "0.10.8"
toml = "1.0"

# Async IO
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"

# Logging
log = "0.4"
env_logger = "0.10"

# Core Reticulum Implementation
#reticulum-sdk = { path = "../reticulum-sdk" }
reticulum-sdk = "2.0"
